--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       <div class="keypad container">
         <div class="row row1">
           <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-primary">1</button>
+            <button type="button" class="btn btn-primary keypad-num" data-num="1">1</button>
             <button type="button" class="btn btn-primary">
               <h1>2</h1>
               <div class="button-text">
