Keypad logic finalized

--- a/src/index.html
+++ b/src/index.html
@@ -30,13 +30,13 @@
         <div class="row row1">
           <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-primary keypad-num" data-num="1">1</button>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="2">
               <h1>2</h1>
               <div class="button-text">
                 A&nbsp;B&nbsp;C
               </div>
             </button>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="3">
               <h1>3</h1>
               <div class="button-text">
                 D&nbsp;E&nbsp;F
@@ -46,19 +46,19 @@
         </div>
         <div class="row row2">
           <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="4">
               <h1>4</h1>
               <div class="button-text">
                 G&nbsp;H&nbsp;I
               </div>
             </button>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="5">
               <h1>5</h1>
               <div class="button-text">
                 J&nbsp;K&nbsp;L
               </div>
             </button>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="6">
               <h1>6</h1>
               <div class="button-text">
                 M&nbsp;N&nbsp;O
@@ -68,19 +68,19 @@
         </div>
         <div class="row row3">
           <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="7">
               <h1>7</h1>
               <div class="button-text">
                 P&nbsp;Q&nbsp;R&nbsp;S
               </div>
             </button>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="8">
               <h1>8</h1>
               <div class="button-text">
                 T&nbsp;U&nbsp;V
               </div>
             </button>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="9">
               <h1>9</h1>
               <div class="button-text">
                 W&nbsp;X&nbsp;Y&nbsp;Z
@@ -93,7 +93,7 @@
             <button type="button" class="btn btn-primary">
               <img src="../assets/symbols/star.svg" />
             </button>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary keypad-num" data-num="0">
               <h1>0</h1>
             </button>
             <button type="button" class="btn btn-primary">
