--- a/src/index.html
+++ b/src/index.html
@@ -104,11 +104,8 @@
         </div>
       </div>
       <div class="contacts">
-        <div class="contacts-list">
-          <div class="contact-display">
-
-          </div>
-        </div>
+        <ul id="contacts-list" class="list-group">
+        </ul>
 
       </div>
     </div>
