--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <div id="app">
       <div class="app-body container-md">
         <div class="header">
+          <div class="header-content">
+
           <h1 class="header-text">Find Contacts</h1>
           <div class="container">
             <div class="row">
@@ -22,7 +24,9 @@
             </div>
           </div>
         </div>
-        <div class="input">
+
+        </div>
+        <div class="input container">
           <input id="search-input" type="text" name="search" defaultValue="search">
           <img id="delete-button" src="./symbols/delete.svg" />
         </div>
@@ -98,12 +102,13 @@
               <div class="w-100"></div>
             </div>
           </div>
-        </div>
-      <div class="contacts">
-        <ul id="contacts-list" class="list-group">
-        </ul>
+          <div class="contacts">
+            <ul id="contacts-list" class="list-group">
+            </ul>
 
-      </div>
+          </div>
+        </div>
+
     </div>
     <script src="index.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
