--- a/src/index.html
+++ b/src/index.html
@@ -13,34 +13,32 @@
         <div class="header">
           <div class="header-content">
 
-          <h1 class="header-text">Find Contacts</h1>
-          <div class="container">
-            <div class="row">
-              <div class="switch-text col-sm">By Name</div>
-              <div class="form-check form-switch col-sm">
-                <input class="form-check-input" type="checkbox" id="search-switch" data-type="name">
-              </div>
-              <div class="switch-text col-sm">By Number</div>
+          <h2 class="header-text">Find Contacts</h2> <br>
+          <div class="header container">
+            <div class="switch-text name">By Name</div>
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="search-switch" data-type="name">
             </div>
+            <div class="switch-text">By Number</div>
           </div>
         </div>
 
         </div>
         <div class="input container">
           <input id="search-input" type="text" name="search" defaultValue="search">
-          <img id="delete-button" src="./symbols/delete.svg" />
+          <button id="delete-button"> <img id="delete" src="./symbols/delete.svg" /> </button>
         </div>
         <div class="keypad container">
           <div class="row">
-              <button type="button" class="btn keypad-num col" data-num="1">1</button>
+              <button type="button" class="btn keypad-num col" data-num="1"><h2>1</h2></button>
               <button type="button" class="btn keypad-num col" data-num="2">
-                <h1>2</h1>
+                <h2>2</h2>
                 <div class="button-text">
                   A&nbsp;B&nbsp;C
                 </div>
               </button>
               <button type="button" class="btn keypad-num col" data-num="3">
-                <h1>3</h1>
+                <h2>3</h2>
                 <div class="button-text">
                   D&nbsp;E&nbsp;F
                 </div>
@@ -49,19 +47,19 @@
           </div>
           <div class="row">
               <button type="button" class="btn keypad-num col" data-num="4">
-                <h1>4</h1>
+                <h2>4</h2>
                 <div class="button-text">
                   G&nbsp;H&nbsp;I
                 </div>
               </button>
               <button type="button" class="btn keypad-num col" data-num="5">
-                <h1>5</h1>
+                <h2>5</h2>
                 <div class="button-text">
                   J&nbsp;K&nbsp;L
                 </div>
               </button>
               <button type="button" class="btn keypad-num col" data-num="6">
-                <h1>6</h1>
+                <h2>6</h2>
                 <div class="button-text">
                   M&nbsp;N&nbsp;O
                 </div>
@@ -70,19 +68,19 @@
           </div>
           <div class="row">
               <button type="button" class="btn keypad-num col" data-num="7">
-                <h1>7</h1>
+                <h2>7</h2>
                 <div class="button-text">
                   P&nbsp;Q&nbsp;R&nbsp;S
                 </div>
               </button>
               <button type="button" class="btn keypad-num col" data-num="8">
-                <h1>8</h1>
+                <h2>8</h2>
                 <div class="button-text">
                   T&nbsp;U&nbsp;V
                 </div>
               </button>
               <button type="button" class="btn keypad-num col" data-num="9">
-                <h1>9</h1>
+                <h2>9</h2>
                 <div class="button-text">
                   W&nbsp;X&nbsp;Y&nbsp;Z
                 </div>
@@ -94,7 +92,7 @@
               <img src="./symbols/star.svg" />
               </button>
               <button type="button" class="btn keypad-num col" data-num="0">
-                <h1>0</h1>
+                <h2>0</h2>
               </button>
               <button type="button" class="btn col">
                 <img src="./symbols/pound.svg" />
