--- a/src/index.html
+++ b/src/index.html
@@ -88,13 +88,13 @@
               <div class="w-100"></div>
             </div>
             <div class="row">
-              <button type="button" class="btn col">
-              <img src="./symbols/star.svg" />
+              <button type="button" class="btn keypad-num col" data-num="*">
+                <img  src="./symbols/star.svg" />
               </button>
               <button type="button" class="btn keypad-num col" data-num="0">
                 <h2>0</h2>
               </button>
-              <button type="button" class="btn col">
+              <button type="button" class="btn keypad-num col" data-num="#">
                 <img src="./symbols/pound.svg" />
               </button>
               <div class="w-100"></div>
