input font size

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <div class="header">
           <div class="header-content">
 
-          <h2 class="header-text">Find Contacts</h2> <br>
+          <h2 class="header-text"><strong>Find Contacts</strong></h2> <br>
           <div class="header container">
             <div class="switch-text name">By Name</div>
             <div class="form-check form-switch">
