final css changes

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
 
           <h2 class="header-text"><strong>Find Contacts</strong></h2> <br>
           <div class="header container">
-            <div class="switch-text name">By Name</div>
+            <div class="switch-text name">By name</div>
             <div class="form-check form-switch">
               <input class="form-check-input" type="checkbox" id="search-switch" data-type="name">
             </div>
-            <div class="switch-text">By Number</div>
+            <div class="switch-text">By number</div>
           </div>
         </div>
 
